# kiss-proced-macros-research

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
src/: lib.rs
tests/: integration.rs
